//
//  PokemonCollectionViewCellIdentifiers.swift
//  Common
//
//  Created by Ronan O Ciosoig on 8/1/23.
//  Copyright © 2023 Sonomos.com. All rights reserved.
//

import Foundation

struct PokemonCollectionViewCellIdentifiers {
    static let name = "Name"
    static let imageView = "Icon"
    static let cell = "Pokemon"
}
