...
            public static let alreadyHaveItAlertMessageTitle = "You have already caught one of this species, you'll have to leave this one..."
            
            public static let noPokemonFoundAlertTitle = "No Pokemon found, you will have to try again."
        }
        
        public struct BackpackScene {
            public static let title = "Backpack"
            public static let closeButton = "Close"
        }
        
        public struct DetailScene {
            public static let weight = "Weight"
            public static let height = "Height"
            public static let date = "Date"
...
