//
//  CatchIdentifiers.swift
//  Catch
//
//  Created by Ronan O Ciosoig on 15/1/23.
//  Copyright © 2023 Sonomos.com. All rights reserved.
//

import Foundation

struct CatchIdentifiers {
    static let alertTitle = "CatchOrLeaveIt"
    static let catchButton = "CatchIt"
    static let leaveItButton = "LeaveIt"
    static let alertError = "Error"
    static let leaveItAlertTitle = "Leave It Title"
}

