//
//  HomeIdentifiers.swift
//  CatchExample
//
//  Created by Ronan O Ciosoig on 18/1/23.
//  Copyright © 2023 Sonomos.com. All rights reserved.
//

import Foundation

struct HomeIdentifiers {
    static let catchButton = "Catch"
    static let catchFixedButton = "Catch Fixed"
    static let catchErrorButton = "Catch Error"
    static let leaveItButton = "Leave It"
}
